# spwn

./: .gitignore  .golangci.yml  .goreleaser.yml  .swp  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  go.mod  go.work  go.work.sum  pnpm-lock.yaml  pnpm-workspace.yaml  spwn.yaml  turbo.json
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  open.yml
.github/workflows/: release.yaml  validate.yaml
__tests__/e2e/: agent_test.go  defaults_test.go  destroy_test.go  elements_test.go  (+10 more)
apps/observatory/src-tauri/: Cargo.toml  tauri.conf.json
apps/observatory/src-tauri/capabilities/: default.json
apps/observatory/src-tauri/src/: lib.rs  main.rs
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/icons/: icon.icns
apps/web/src-tauri/src/: lib.rs  main.rs
catalog/: bundled_test.go  dependencies.go  dependencies_test.go  embed.go  examples.go  examples_test.go  go.mod  integration_test.go  loader.go
cli/: defaults.go  go.mod  init.go  root.go
container/: Dockerfile
docs/: 01-getting-started.md  02-concepts.md  03-cli.md  04-primitives.md  05-architecture.md  06-gate.md  07-testing.md  README.md  architecture.md  automations.md  comparison.md  composition.md  dependencies.md  dependency-catalog.md  gate-test-debt.md  identity.md  pack-catalog.md  plugin-catalog.md  principles.md  recipes.md  releasing.md  tool-catalog.md  update-system.md  world-physics.md  worlds.md
examples/: examples.go  examples_test.go  go.mod
platform/gate-runtime/: Cargo.toml  README.md
scripts/: install.sh
shared/: go.mod
tests/: .gitignore  .prettierignore  ARCHITECTURE.md  README.md  knip.json  oxfmt.config.ts  oxlint.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.smoke.config.ts  vitest.workspace.ts
(+1746 files in other folders)
