[package]
name = "spwn-observatory"
version = "0.10.4"
description = "spwn Observatory — visual dashboard for AI agents"
authors = ["jterrazz"]
edition = "2024"

[lib]
name = "spwn_observatory_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portpicker = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
